**pnp-0.6.17 ??/??/2011**
  * Bugfix:  Fixed rrd_convert.pl while running with --dry-run
  * Bugfix:  logging.c include missing header files ( Lars Vogdt )       
  * Bugfix:  Check if pnp4nagios/etc/rra.cfg is readable
  * Feature: npcdmod.o increase perfdata buffer and log discarded perfdata ( Birger Schmidt )
  * Feature: rrd_modify.pl to change number of data sources of an RRD file

**pnp-0.6.16 11/21/2011**
  * Bugfix:  Fixed single quoted check_multi labels (Reported by Matthias Flacke)
  * Bugfix:  Append missing slash to perfdata_spool_dir ( Reported by Juergen-Michael Radtke ) 
  * Bugfix:  Fixed jQuery-ui multisite theme
  * Feature: PDF margins are now adjustable via config.php ( Thomas Witzenrath )
  * Feature: Support for PDF size 'letter' added ( Robert Becht )

**pnp-0.6.15 09/15/2011**
  * Bugfix:  Fixed Overview link (reported by Stefan Triep)
  * Bugfix:  Fixed zoom popup (reported by Rudolf Labuschagne)
  * Bugfix:  Fixed double urlencode() (reported by Mathias Kettner)
  * Feature: "Clear basket" button added (suggested by Stefan Triep) 
  * Feature: New helper function "rrd::alerter_gr()" ( committed by Stefan Trip )

**pnp-0.6.14 08/05/2011**
  * Feature: Webinterface for mobile devices based on jQuery Mobile \\ ( http://jquerymobile.com/ )
  * Feature: Zoom based on jQuery plugin imgAreaSelect \\ ( http://odyniec.net/projects/imgareaselect/ )
  * Feature: New template check_mssql_health.php
  * Bugfix:  Fixed popups to work under nginx ( Joram Agten )
  * Bugfix:  Helper rrd::vdef() fixed 
  * Update:  jQuery update to 1.6.2
  * Update:  jQuery-ui update to 1.8.14

**pnp-0.6.13 05/19/2011**
  * Feature: New option --ignore-hosts added to check_pnp_rrds.pl ( by Jochen Bern )
  * Feature: New options zgraph_width and zgraph_height in config.php ( Mike Liebsch )
  * Bugfix:  rrd_convert.pl: parse_xml_filename() regex fix
  * Info:    Version used by OMD-0.48 [[http://omdistro.org|OMD]]

**pnp-0.6.12 04/22/2011**