@@ -4,6 +4,7 @@
   * Bugfix:  Check if pnp4nagios/etc/rra.cfg is readable
   * Feature: npcdmod.o increase perfdata buffer and log discarded perfdata ( Birger Schmidt )
   * Feature: rrd_modify.pl to change number of data sources of an RRD file
+  * Feature: new template check_apachestatus_auto.php
 
 **pnp-0.6.16 11/21/2011**
   * Bugfix:  Fixed single quoted check_multi labels (Reported by Matthias Flacke)
